--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,10 @@
 
-    <div class="banner">
+    <div class="banner" style="background-image: url('https://images.unsplash.com/photo-1504704911898-68304a7d2807?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80'); background-size: cover;">
       <div class="container">
-        <h1>
-          LOGO HERE
+        <h1 style="font-size: 48px;">
+          You plan a party, we make it memorable
         </h1>
+        <h3 style="color: white;">Welcome to Crazy Party Stuff</h3>
       </div>
     </div>
 
@@ -23,4 +24,3 @@
 <div class="text-center">
   <a href="./attractions" class="button-attractions">See all... 🎡</a>
 </div>
-
