--- a/app/views/attractions/user_attractions.html.erb
+++ b/app/views/attractions/user_attractions.html.erb
@@ -1,4 +1,4 @@
-<div class="main-container">
+<div class="container">
   <h1>My party attractions</h1>
   <%= link_to "Add attraction to rent", new_attraction_path, class: "btn btn-primary my-2" %>
   <% if flash[:alert] %>
