--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,8 @@
-  <h1>Contact us</h1>
-  <p>Need help with your crazy attraction? We'll be happy to assist!</p>
-  <p>phone: +33 1 46 38 47 55</p>
-  <p>email: crazy-party-stuff@partyon.com</p>
+  <div class="main-container">
+    <div class="container">
+        <h1>Contact us</h1>
+        <p>Need help with your crazy attraction? We'll be happy to assist!</p>
+        <p>phone: +33 1 46 38 47 55</p>
+        <p>email: crazy-party-stuff@partyon.com</p>
+    </div>
+  </div>
