--- a/app/views/components/_pages_nav.html.erb
+++ b/app/views/components/_pages_nav.html.erb
@@ -1,5 +1,5 @@
 <div class="pages_nav">
-  <a id="logo" href="/"><%= cl_image_tag("CPF_logo_aa6osb",
+  <a id="logo" href="/"><%= cl_image_tag("CPF_logo_f5rkd5",
       width: 40, height: 40, crop: :fill) %></a>
   <a href="/attractions">Attractions</a>
   <a href="/about">About</a>
