--- a/app/views/attractions/show.html.erb
+++ b/app/views/attractions/show.html.erb
@@ -10,6 +10,9 @@
       <h2 class="attracname">
         <%= @attraction.name %>
       </h2>
+      <% unless current_user.nil? %>
+      <p><%= link_to "Contact owner", conversations_path(sender_id: current_user.id, recipient_id: @attraction.user.id), method: 'post'%></p>
+      <% end %>
       <h3>
         <%= @attraction.one_liner %>
       </h3>
