--- a/app/views/attractions/_review_form.html.erb
+++ b/app/views/attractions/_review_form.html.erb
@@ -1,5 +1,5 @@
 <%#= simple_form_for([ @attraction, @review ], %>
-<%= simple_form_for(@review, url: attraction_reviews_path(@attraction),
+<%= simple_form_for(review, url: attraction_reviews_path(@attraction),
                     data: {
                       insert_in_list_target: "form",
                       action: "submit->insert-in-list#send"
